# substreams-tron

./: .gitignore  Cargo.toml  Makefile  README.md  substreams-tron-v0.1.0.spkg  substreams.yaml
.github/: copilot-instructions.md
clickhouse-tron-balances/: schema.0.offchain.balances.sql  schema.0.offchain.trc20_balances.sql  schema.3.view.balances.sql
clickhouse-tron-dex/: Cargo.toml  Makefile  README.md  schema.0.blocks.sql  schema.0.templates.sql  schema.1.table.justswap_swaps.sql  schema.1.table.sunpump_swaps.sql  schema.1.table.sunswap_swaps.sql  schema.2.mv.swaps.sql  schema.2.mv.swaps.sql.todo  schema.2.view.swaps.sql  schema.3.mv.ohlc_prices.sql  schema.4.mv.pool_activity_summary.sql  substreams.yaml
clickhouse-tron-dex/examples/: OHLC prices.sql  Pool Activity.sql  Supported DEXs.sql
clickhouse-tron-dex/src/: dex_swaps.rs  foundational_stores.rs  justswap.rs  lib.rs  logs.rs  sunpump.rs  sunswap.rs  sunswap_foundational_store.rs  transactions.rs
clickhouse-tron-tokens/: Cargo.toml  Makefile  README.md  schema.0.blocks.sql  schema.0.functions.sql  schema.0.offchain.balances.sql  schema.0.offchain.metadata.sql  schema.0.offchain.trc20_balances.sql  schema.0.templates.sql  schema.1.table.native_transfer.sql  schema.1.table.trc20_transfer.sql  schema.1.table.weth.sql  schema.2.agg.trc20_transfer.sql  schema.2.aggregating.trc20_transfer_agg.sql  schema.2.mv.filters_by_minute.sql  schema.2.mv.native_transfer_minutes.sql  schema.2.mv.trc20_transfer_minutes.sql  schema.2.sum.trc20_transfer.sql  schema.2.summing.native_transfer_minutes.sql  schema.2.summing.trc20_transfer_minutes.sql  schema.2.summing.trc20_transfer_sum.sql  schema.2.table.trc20_balances.TO-REMOVE  schema.2.table.trc20_balances.sql  schema.3.view.balances.sql  schema.3.view.transfers.sql  substreams.yaml
clickhouse-tron-tokens/examples/: Balances.sql  Lookup Old Token.sql  PROJECTIONS.sql  TRC20 Balances.sql  TRC20 Transfers.sql  Transfers.sql  schema.2.aggregating.trc20_transfer_agg.sql  schema.2.mv.native_transfer_minutes.sql-v0.1.5  schema.2.summing.trc20_transfer.sql  schema.2.summing.trc20_transfer_sum.sql  schema.3.view.transfers.sql  v0.1.4-queries.sql  v0.1.5-queries.sql  v0.1.6-queries.sql  v0.2.0-queries.sql
clickhouse-tron-tokens/migrations/: v0.1.4-native_transfer-backfill.sql  v0.1.4-native_transfer.sql  v0.1.4-trc20_transfer-backfill.sql  v0.1.4-trc20_transfer.sql  v0.1.4.sql  v0.1.5-native_transfer-backfill.sql  v0.1.5-native_transfer.sql  v0.1.5-schema.2.mv.trc20_transfer_minutes.sql  v0.1.5-trc20_transfer-backfill.sql  v0.1.5-trc20_transfer.sql  v0.1.6-schema.2.mv.native_transfer_relative_minutes.sql  v0.1.6-schema.2.mv.trc20_transfer_relative_minutes.sql  v0.1.6-trc20_transfer-backfill.sql  v0.1.6-trc20_transfer.sql  v0.2.1.sql
clickhouse-tron-tokens/sql/: native_transfers.sql  trc20_transfers.sql
clickhouse-tron-tokens/src/: lib.rs  logs.rs  native_transfers.rs  transactions.rs  trc20_transfers.rs  utils.rs  weth.rs
common/: Cargo.toml
common/src/: clickhouse.rs  debug.rs  lib.rs
common/tests/: address_tests.rs
crates/substreams-tron/: Cargo.toml  build.rs
crates/substreams-tron/src/: lib.rs
curvefi/: Cargo.toml  Makefile  README.md  substreams.yaml
curvefi/src/: lib.rs  store.rs
docs/: GETTING_STARTED.md
foundational-store/: Cargo.toml  Makefile  substreams.yaml
foundational-store/src/: lib.rs
justswap/: Cargo.toml  Makefile  build.rs  substreams.yaml
justswap/src/: lib.rs
justswap/v1/: justswap.proto
proto/: Cargo.toml  Makefile  build.rs  substreams.yaml
proto/src/: lib.rs
proto/src/pb/: mod.rs  sf.substreams.foundational_store.v1.rs  tron.curvefi.v1.rs  tron.foundational_store.v1.rs  tron.justswap.v1.rs  tron.stores.v1.rs  tron.sunpump.v1.rs  tron.sunswap.v1.rs  tron.transfers.v1.rs  tron.trc20.token.v1.rs
proto/v1/: curvefi.proto  foundational_store.proto  justswap.proto  stores.proto  sunpump.proto  sunswap.proto  transfers.proto  trc20.proto  tron.proto
scripts/: compact.ts  decimals.ts  package.json  trc20-metadata.ts
src/: lib.rs
stores/: Cargo.toml  Makefile  substreams.yaml
stores/src/: foundational_store.rs  store.rs
sunpump/: Cargo.toml  Makefile  substreams.yaml
sunpump/src/: lib.rs
sunpump/tests/: token_create.rs
sunswap/: Cargo.toml  Makefile  build.rs  substreams.yaml
sunswap-store/: Cargo.toml  Makefile  substreams.yaml
sunswap-store/src/: foundational_store.rs  lib.rs  store.rs
sunswap/src/: lib.rs  stores.rs
sunswap/v1/: sunswap.proto
transfers/: Cargo.toml  Makefile  substreams.yaml
transfers/src/: lib.rs
trc20/: Cargo.toml  Makefile  substreams.yaml
trc20/src/: lib.rs
tron-blocks/: Cargo.toml  substreams.yaml
tron-blocks/src/: lib.rs
