[workspace]
members = [
  # Tokens
  "transfers",
  "clickhouse-tron-tokens",

  # DEX
  "sunswap",
  "justswap",
  "sunpump",

  # Common
  "stores",
  "proto",
  "common",
]
resolver = "2"

[workspace.package]
description = "Tron Substreams modules"
edition = "2021"
version = "0.0.0"
license = "Apache-2.0"

[workspace.dependencies]
substreams = "0.6.2"
substreams-abis = "0.5.1"
substreams-ethereum = "0.10.6"
substreams-database-change = "2.1.2"
prost = "0.13"
prost-types = "0.13"
prost-build = "0.13"

[profile.release]
lto = true
