[package]
name = "clickhouse-tron-dex"
description = { workspace = true }
edition = { workspace = true }
version = { workspace = true }

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
substreams = { workspace = true }
substreams-ethereum = { workspace = true }
substreams-database-change = { workspace = true }
hex = "0.4"

proto = { path = "../proto" }
common = { path = "../common" }
