[package]
name = "substreams-tron-common"
description.workspace = true
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
substreams.workspace = true
substreams-tron-proto = { path = "../proto" }
prost.workspace = true
hex.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]