[package]
name = "tron-foundational-store"
description = "Tron Foundational Store"
edition = { workspace = true }
version = { workspace = true }
authors = ["Denis <denis@pinax.network>"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
substreams = { workspace = true }
substreams-ethereum = { workspace = true }
substreams-abis = { workspace = true }
proto = { path = "../proto" }
prost = { workspace = true }
prost-types = { workspace = true }

[build-dependencies]
prost-build = { workspace = true }
