[package]
name = "sunswap"
description = "SunSwap V2 DEX Events"
edition = { workspace = true }
version = { workspace = true }
authors = ["Denis <denis@pinax.network>"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
substreams = { workspace = true }
substreams-ethereum = { workspace = true }
substreams-abis = { workspace = true }
proto = { path = "../proto" }
prost = { workspace = true }
prost-types = { workspace = true }
