[package]
name = "transfers"
description = "TRC20 & Native Transfers"
edition = { workspace = true }
version = { workspace = true }
authors = ["Denis <denis@pinax.network>"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
substreams = { workspace = true }
substreams-ethereum = { workspace = true }
substreams-abis = { workspace = true }
proto = { path = "../proto" }
common = { path = "../common" }