[package]
name = "tron-blocks"
description.workspace = true
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
substreams.workspace = true
substreams-tron-proto = { path = "../proto" }
substreams-tron-common = { path = "../common" }
prost.workspace = true

[lib]
crate-type = ["cdylib"]